chore: updated about us page

--- a/src/templates/aboutus.html
+++ b/src/templates/aboutus.html
@@ -13,24 +13,24 @@
         <h1>About Us</h1>
     </div>
     <div class="box">
-        <img src="../static/assets/placeholder.png" alt="Picture of Max">
+        <img src="../static/assets/Max.jpg" alt="Picture of Max">
         <div class="text">
             <h2>[13522061] Maximilian Sulistiyo</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p><a href="https://github.com/riyorax">GitHub Profile</a><br>Hah quotes? kuota gw abis coy</p>
         </div>
     </div>
     <div class="box">
-        <img src="../static/assets/placeholder.png" alt="Picture of Evelyn">
+        <img src="../static/assets/Evelyn.jpg" alt="Picture of Evelyn">
         <div class="text">
             <h2>[13522083] Evelyn Yosiana</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p><a href="https://github.com/evelynnn04">GitHub Profile</a><br>Hahaha-in aja</p>
         </div>
     </div>
     <div class="box">
-        <img src="../static/assets/placeholder.png" alt="Picture of Andhika">
+        <img src="../static/assets/Andhika.jpg" alt="Picture of Andhika">
         <div class="text">
             <h2>[13522094] Andhika Tantyo Anugrah</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p><a href="https://github.com/CrystalNoob">GitHub Profile</a><br>Practice makes perfect, but nobody is perfect.</p>
         </div>
     </div>
 </body>
