--- a/src/templates/searchengineconcept.html
+++ b/src/templates/searchengineconcept.html
@@ -12,6 +12,10 @@
     <div id="title">
         <h1>Search Engine Concept</h1>
     </div>
+    <div class="box-youtube">
+        <h2>Explanation Video</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BNi19rGrGkU?si=i_g_nqvugPjbyCcE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
     <div class="box">
         <div class="text">
             <h2>CONTENT-BASED INFORMATION RETRIEVAL (CBIR)</h2>
