--- a/src/static/result_style.css
+++ b/src/static/result_style.css
@@ -62,7 +62,7 @@ body {
     align-items: center;
 }
 
-.item-image {
+/* .item-image {
     margin: 10px;
     padding: 15px;
     background-color: #fff;
@@ -76,6 +76,27 @@ body {
     object-fit: contain;
     width: 200px;
     height: 200px;
+} */
+
+.item-image {
+    margin: 1%;
+    padding: 1vw;
+    background-color: #fff;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(100% - 2%);
+    max-width: 300px;
+}
+
+.item-image img {
+    width: 80%;
+    height: auto;
+    border-radius: 6px;
 }
 
 .left {
