--- a/src/static/result_style.css
+++ b/src/static/result_style.css
@@ -62,21 +62,23 @@ body {
     align-items: center;
 }
 
-/* .item-image {
-    margin: 10px;
-    padding: 15px;
-    background-color: #fff;
-    box-sizing: border-box;
-    text-align: center;
-    border-radius: 6px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+@media(max-width: 1440px){
+    .item-image {
+        margin: 10px;
+        padding: 15px;
+        background-color: #fff;
+        box-sizing: border-box;
+        text-align: center;
+        border-radius: 6px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-.item-image img {
-    object-fit: contain;
-    width: 200px;
-    height: 200px;
-} */
+    .item-image img {
+        object-fit: contain;
+        width: 200px;
+        height: 200px;
+    }
+}
 
 .item-image {
     margin: 1%;
@@ -90,7 +92,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: calc(100% - 2%);
-    max-width: 300px;
+    max-width: 400px;
 }
 
 .item-image img {
