--- a/src/static/result_style.css
+++ b/src/static/result_style.css
@@ -62,24 +62,6 @@ body {
     align-items: center;
 }
 
-@media(max-width: 1440px){
-    .item-image {
-        margin: 10px;
-        padding: 15px;
-        background-color: #fff;
-        box-sizing: border-box;
-        text-align: center;
-        border-radius: 6px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .item-image img {
-        object-fit: contain;
-        width: 200px;
-        height: 200px;
-    }
-}
-
 .item-image {
     margin: 1%;
     padding: 1vw;
@@ -99,6 +81,25 @@ body {
     width: 80%;
     height: auto;
     border-radius: 6px;
+}
+
+@media(max-width: 1440px){
+    .item-image {
+        margin: 10px;
+        padding: 15px;
+        background-color: #fff;
+        box-sizing: border-box;
+        text-align: center;
+        border-radius: 6px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 280px;
+    }
+
+    .item-image img {
+        object-fit: contain;
+        width: 200px;
+        height: 200px;
+    }
 }
 
 .left {
