fix: fixed upload image type and zipping folder in result

--- a/src/templates/result.html
+++ b/src/templates/result.html
@@ -37,7 +37,7 @@
                             <span class="right-text">Texture</span>
                         </div>
                         <h3>Upload Image</h3>
-                        <input type="file" name="upload_image" id="upload_image" onchange="previewImage(this)">
+                        <input type="file" name="upload_image" id="upload_image" onchange="previewImage(this)" accept=".png, .jpg, .jpeg, .bmp">
                         <br>
                         <input type="submit" value="Search">
                     </form>
